@@ -40,6 +40,7 @@ public class QueryCommand {
   private long timeAllowed = -1;
   private int minExactCount = Integer.MAX_VALUE;
   private CursorMark cursorMark;
+  private boolean enableDistribStats = true;
 
   public CursorMark getCursorMark() {
     return cursorMark;
@@ -244,5 +245,13 @@ public class QueryCommand {
 
   public boolean isQueryCancellable() {
     return isQueryCancellable;
+  }
+
+  public void setEnableDistribStats(boolean enableDistribStats) {
+    this.enableDistribStats = enableDistribStats;
+  }
+
+  public boolean isEnableDistribStats() {
+    return enableDistribStats;
   }
 }
